--- a/application/bp/authentication/templates/dashboard.html
+++ b/application/bp/authentication/templates/dashboard.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 
 {% block title %}Dashboard{% endblock %}
+
 {% block content %}
     <h2>Dashboard</h2>
-    {{ name }}
+    <p>Welcome, {{ user.email }}</p>
 {% endblock %}
+
